<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.educationalapp.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/Question_1"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/What_Sport_Kelly_Slater_Plays"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/Q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="24dp">

                <RadioButton
                    android:id="@+id/baseball_radiobutton"
                    android:text="@string/Baseball"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"/>

                <RadioButton
                    android:id="@+id/surfer_radiobutton"
                    android:text="@string/Surfing"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/Question_2"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/How_Many_World_Titles_KS_Has_Won"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="24dp">

                <RadioButton
                    android:id="@+id/three_radiobutton"
                    android:text="@string/three_World_Titles"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"/>

                <RadioButton
                    android:id="@+id/eleven_radiobutton"
                    android:text="@string/eleven_Wolrd_Titles"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/Question_3"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/How_Do_You_Spell_KS_Name"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/plain_text_input"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/Spell_KS_Name"
                android:inputType="textCapWords"
                android:padding="24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/Question_4"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/In_Which_Houses_Kelly_Lives_Select_all_that_apply"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/jadaipur_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="24dp"
                android:text="@string/Jadaipur"
                android:textSize="16sp"
                />

            <CheckBox
                android:id="@+id/santa_barbara_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="24dp"
                android:text="@string/Santa_Barbara"
                android:textSize="16sp"
                />

            <CheckBox
                android:id="@+id/gold_coast_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="24dp"
                android:text="@string/Gold_Coast"
                android:textSize="16sp"
                />

            <CheckBox
                android:id="@+id/north_shore_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="24dp"
                android:text="@string/North_Shore"
                android:textSize="16sp"
                />

            <CheckBox
                android:id="@+id/milan_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="24dp"
                android:text="@string/Milan"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/Question_5"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/Who_Was_KS_Biggest_Archrival"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="24dp">

                <RadioButton
                    android:id="@+id/andy_irons_radiobutton"
                    android:text="@string/Andy_Irons"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"/>

                <RadioButton
                    android:id="@+id/tom_curren_radiobutton"
                    android:text="@string/Tom_Curren"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/Question_6"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/What_is_KS_Age_in_2018"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="24dp">

                <RadioButton
                    android:id="@+id/forty_five_radiobutton"
                    android:text="@string/forty_five"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"/>

                <RadioButton
                    android:id="@+id/forty_six_radiobutton"
                    android:text="@string/forty_six"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/Question_7"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/What_is_KS_Middle_Name"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/plain_text_input_two"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/R"
                android:inputType="textCapWords"
                android:padding="24dp" />
        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:background="#00BCD4"
            android:onClick="onClickBtn"
            android:text="@string/SUBMIT_ANSWERS" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#00BCD4"
            android:onClick="resetScores"
            android:text="@string/RESET" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>
